# Apollo

./: .gitignore  .gitmodules  AZURE_PIPELINES_FIX.md  BUILD.md  CMakeLists.txt  PKGBUILD  README.md  README.rst  apollo.icns  apollo.install  build-pkg.sh  docker-build-windows.ps1  docker-compose.windows.yml  generated-sources.json  package-lock.json  vcpkg-configuration.json  vcpkg.json  vite.config.js
.github/: CONTRIBUTING.md
.github/workflows/: build-linux-native.yml  build-linux.yml  build-macos.yml  build-windows.yml  build.yml  docker-build.yml  docker-clion-toolchain.yml  release.yml  upstream-compatibility.yml  windows-build.yml
cmake/: FindDEPcurl.cmake  FindDEPminiupnpc.cmake
cmake/compile_definitions/: common.cmake  linux.cmake  windows.cmake
cmake/dependencies/: Boost_Sunshine.cmake  common.cmake  unix.cmake  windows.cmake
cmake/macros/: common.cmake
cmake/packaging/: common.cmake  linux.cmake  windows.cmake  windows_nsis.cmake
cmake/prep/: build_version.cmake  init.cmake  options.cmake  special_package_configuration.cmake
cmake/targets/: common.cmake
docker/: Dockerfile.windows  README.windows.md  windows-build.ps1  windows-build.sh
docs/: Doxyfile  api.md  building.md  configuration.md  contributing.md  fork-maintenance.md  remote_microphone.md
packaging/linux/: io.github.primezx.ApolloUbuntu.metainfo.xml
scripts/: linux_build.sh
scripts/icons/: convert_and_pack.sh
src/: audio.cpp  audio.h  auto_bitrate.cpp  auto_bitrate.h  cbs.cpp  config.cpp  config.h  confighttp.cpp  confighttp.h  crypto.cpp  crypto.h  display_device.cpp  display_device.h  entry_handler.cpp  globals.h  httpcommon.cpp  httpcommon.h  input.cpp  input.h  logging.cpp  main.cpp  misc.h  network.cpp  nvhttp.cpp  nvhttp.h  process.cpp  process.h  rswrapper.h  rtsp.cpp  rtsp.h  seat.cpp  seat.h  stream.cpp  stream.h  system_tray.cpp  system_tray.h  thread_safe.h  upnp.cpp  utility.h  uuid.h  (+4 more)
tests/: CMakeLists.txt
tools/: CMakeLists.txt  apollo_wgc_capture.cpp  apollovmicctl.cpp  audio.cpp  dxgi.cpp  sunshinesvc.cpp  utils.cpp  utils.h
(+135 files in other folders)
